--- a/rollup/core/classes/RollupAsyncProcessor.cls
+++ b/rollup/core/classes/RollupAsyncProcessor.cls
@@ -473,7 +473,7 @@ global virtual without sharing class RollupAsyncProcessor extends Rollup impleme
     if (this.isValidAdditionalCalcItemRetrieval(rollup) == false) {
       return;
     }
-    // rollup.isFullRecalc = true;
+    // rollup.isFullRecalc = true; TODO fixme
 
     String key = rollup.calcItemType.getDescribe().getName();
     List<SObject> additionalCalcItems;
@@ -1015,8 +1015,8 @@ global virtual without sharing class RollupAsyncProcessor extends Rollup impleme
         // has already been setup to adjust the lookup item's rollup field
         if (localCalcItems.isEmpty() == false || localCalcItems.isEmpty() && oldLookupItems.isEmpty()) {
           Object priorVal = lookupRecord.get(rollup.opFieldOnLookupObject);
-          Object newVal = this.calculateNewRollupVal(calc, rollup, localCalcItems, lookupRecord, priorVal, key, rollup.lookupFieldOnCalcItem);
-          this.conditionallyPerformUpdate(priorVal, newVal, lookupRecord, rollup, recordsToUpdate, updater, 'lookup');
+          calc = this.getCalculator(calc, rollup, localCalcItems, lookupRecord, priorVal, key, rollup.lookupFieldOnCalcItem);
+          this.conditionallyPerformUpdate(priorVal, calc, lookupRecord, rollup, recordsToUpdate, updater, 'lookup');
         }
       }
     }
@@ -1109,7 +1109,7 @@ global virtual without sharing class RollupAsyncProcessor extends Rollup impleme
     }
   }
 
-  private Object calculateNewRollupVal(
+  private RollupCalculator getCalculator(
     RollupCalculator rollupCalc,
     RollupAsyncProcessor roll,
     List<SObject> calcItems,
@@ -1128,16 +1128,15 @@ global virtual without sharing class RollupAsyncProcessor extends Rollup impleme
         lookupRecordKey,
         lookupKeyField
       );
-      rollupCalc.setFullRecalc(roll.isFullRecalc);
-      rollupCalc.setEvaluator(roll.eval);
-      rollupCalc.setCDCUpdate(this.isCDCUpdate);
     } else {
       rollupCalc.setDefaultValues(lookupRecordKey, priorVal);
     }
-
+    rollupCalc.setFullRecalc(roll.isFullRecalc);
+    rollupCalc.setEvaluator(roll.eval);
+    rollupCalc.setCDCUpdate(this.isCDCUpdate);
     rollupCalc.setMultiCurrencyInfo(lookupRecord);
     rollupCalc.performRollup(calcItems, roll.oldCalcItems);
-    return rollupCalc.getReturnValue();
+    return rollupCalc;
   }
 
   private void removeRolledUpValuesFromReparentedRecords(
@@ -1150,7 +1149,7 @@ global virtual without sharing class RollupAsyncProcessor extends Rollup impleme
     if (oldLookupItems.isEmpty()) {
       return;
     }
-
+    RollupCalculator calc;
     Op deleteOp = Rollup.Op.valueOf('DELETE_' + getBaseOperationName(roll.op.name()));
     RollupAsyncProcessor oldLookupsRollup = getProcessor(
       new FilterResults(),
@@ -1165,8 +1164,6 @@ global virtual without sharing class RollupAsyncProcessor extends Rollup impleme
       this.rollupControl,
       roll.metadata
     );
-    RollupCalculator calc;
-
     for (SObject lookupRecord : lookupItems) {
       if (lookupRecord.getSObjectType() != roll.lookupObj) {
         continue;
@@ -1182,19 +1179,16 @@ global virtual without sharing class RollupAsyncProcessor extends Rollup impleme
         }
 
         oldLookupsRollup.calcItems = reparentedCalcItems;
-
         RollupLogger.Instance.log('reparenting operation:', oldLookupsRollup, LoggingLevel.DEBUG);
-
-        Object newVal = this.calculateNewRollupVal(calc, oldLookupsRollup, reparentedCalcItems, lookupRecord, priorVal, key, roll.lookupFieldOnCalcItem);
-
-        this.conditionallyPerformUpdate(priorVal, newVal, lookupRecord, roll, recordsToUpdate, updater, 'reparented');
+        calc = this.getCalculator(calc, oldLookupsRollup, reparentedCalcItems, lookupRecord, priorVal, key, roll.lookupFieldOnCalcItem);
+        this.conditionallyPerformUpdate(priorVal, calc, lookupRecord, roll, recordsToUpdate, updater, 'reparented');
       }
     }
   }
 
   private void conditionallyPerformUpdate(
     Object priorVal,
-    Object newVal,
+    RollupCalculator calc,
     SObject lookupRecord,
     RollupAsyncProcessor roll,
     Map<String, SObject> recordsToUpdate,
@@ -1202,6 +1196,7 @@ global virtual without sharing class RollupAsyncProcessor extends Rollup impleme
     String logKey
   ) {
     RollupLogger.Instance.log(logKey + ' record prior to rolling up:', lookupRecord, LoggingLevel.DEBUG);
+    Object newVal = calc.getReturnValue();
     if (priorVal != newVal || this.isFullRecalc || roll.isFullRecalc) {
       String key = (String) lookupRecord.get(roll.lookupFieldOnLookupObject);
       RollupLogger.Instance.log('updating record ...', LoggingLevel.FINE);
